# FaceVeil

./: CMakeLists.txt  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.txt  VIDEO_ROADMAP.md
.github/workflows/: ci.yml  release.yml
assets/: CloakFrame.rc  cloakframe.desktop
cmake/: CloakFrameHarden.cmake  FindOnnxRuntimeLocal.cmake
include/cloakframe/: DetectionGeometry.hpp  Detector.hpp  FaceDetection.hpp  ImageIo.hpp  ImageScanner.hpp  MainWindow.hpp  MemoryBudget.hpp  ModelCatalog.hpp  ModelDownloader.hpp  Mosaic.hpp  OnnxGraphPatch.hpp  OrderedParallel.hpp  OrtAcceleration.hpp  OutputPlan.hpp  PathSafety.hpp  PathUtil.hpp  PlateDetector.hpp  ProcessorWorker.hpp  ReviewDialog.hpp  ReviewTypes.hpp  SceneCut.hpp  ScrfdFaceDetector.hpp  Theme.hpp  (+7 more)
release-notes/: v1.10.0.md  v1.10.1.md
scripts/: check_translations.py  package_linux.sh  package_macos.sh  package_windows.ps1
src/: CMakeLists.txt  ImageIo.cpp  ImageScanner.cpp  MainWindow.cpp  MemoryBudget.cpp  ModelCatalog.cpp  ModelDownloader.cpp  Mosaic.cpp  OnnxGraphPatch.cpp  OrtAcceleration.cpp  OutputPlan.cpp  PlateDetector.cpp  ProcessorWorker.cpp  ReviewDialog.cpp  SceneCut.cpp  ScrfdFaceDetector.cpp  SettingsDialog.cpp  Theme.cpp  Tracking.cpp  UpdateChecker.cpp  VideoIo.cpp  VideoProcessor.cpp  VideoReviewDialog.cpp  YunetFaceDetector.cpp  main.cpp
tests/: CMakeLists.txt  test_core.cpp  test_parallel.cpp  test_tracking.cpp  test_video_io.cpp
tools/: CMakeLists.txt  inspect_model.cpp  video_detect_stats.cpp
translations/: cloakframe_ja.ts  cloakframe_ko.ts  cloakframe_zh_CN.ts  redactly_ko.ts
(+19 files in other folders)
