function(add_cloakframe_test name)
    add_executable(${name} ${ARGN})
    if(MSVC)
        target_compile_options(${name} PRIVATE /UNDEBUG)
    else()
        target_compile_options(${name} PRIVATE -UNDEBUG)
    endif()
    target_link_libraries(${name} PRIVATE cloakframe_core)
    cloakframe_harden(${name})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_cloakframe_test(cloakframe_tests test_core.cpp)
add_cloakframe_test(cloakframe_tracking_tests test_tracking.cpp)
add_cloakframe_test(cloakframe_parallel_tests test_parallel.cpp)
add_cloakframe_test(cloakframe_video_io_tests test_video_io.cpp)
set_tests_properties(cloakframe_video_io_tests PROPERTIES SKIP_RETURN_CODE 77)
